# dz-dashboard

./: .env.example  .gitignore  01_SPEC.md  04_ANALYTICS_MODEL.md  05_API_CONTRACT.md  06_DESIGN_SYSTEM.md  10_OPEN_QUESTIONS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN_HANDOFF.md  Makefile  PHASE2_KICKOFF.md  PROGRESS.md  README.md  package-lock.json  prerequisites.md  pyproject.toml
.claude/skills/fix-pass/: SKILL.md
.claude/skills/green-gate/: SKILL.md
.claude/skills/milestone-session/: SKILL.md
.github/workflows/: ci.yml  e2e.yml
claude-design-files/design_handoff_dz_dashboard/: Danger Zone Dashboard.html  README.md  app.js
claude-design-files/design_handoff_dz_dashboard/styles/: app.css  rivalries.css  tokens.css  wireframe.css
docs/: 00_SEAM.md  01_SPEC.md  02_ARCHITECTURE.md  03_DATA_ACCESS.md  04_ANALYTICS_MODEL.md  05_API_CONTRACT.md  06_DESIGN_SYSTEM.md  07_PAGES_AND_VIEWS.md  08_TESTING_STRATEGY.md  09_ROADMAP.md  10_OPEN_QUESTIONS.md  ACTIVE_WORK.md  DESIGN_HANDOFF.md  P0_DATA_READINESS.md  PHASE2_5_RESONANCE.md  PHASE2_RUNBOOK.md
docs/archive/: COMPLETED_WORK.md  P0_DATA_READINESS.md  PHASE2_KICKOFF.md  commissioner-history.md  fix-P1-analytics.md  fix-P2-post-regen-redo.md  fix-P3-search.md  fix-P4-transactions.md  players-audit-dashboard.md  prerequisites.md
docs/handoffs/: 00-data-integrity-program.md  bonus-scoring-rescore.md  data-coverage-matrix.md  dst-points-allowed-rederivation.md  faab-bid-capture.md  hamlin-2022-championship-context.md  player-identity-resolution.md  players-audit-danger-zone.md  review-fix-pass.template.md  season-correct-nfl-team-danger-zone.md
docs/plans/: COMPLETION_ROADMAP.md  P-draft-adp-market-axis.md  P-draft-impact-integrity.md  P-draft-impact-model.md  REVIEW_FIXES_ROADMAP.md  bff-weekly-division-standings.md  bonus-scoring-fidelity-remaining.md  bonus-scoring-fidelity.md  championship-flag-consolation-sacko.md  data-integrity-coverage-program.md  deferred-product-decisions.md  draft-market-reach-value-recalibration.md  dst-deep-classification.md  engagement-rivalries-strength.md  fix-P2-honesty.md  fix-P2-post-regen-redo.md  fix-P4-transactions.md  fix-P5-frontend-fixes.md  fix-P6-frontend-insights.md  insights-lab-v0.md  owner-epithet-proposal.md  resonance-legacy-spine.md  resonance-viz-suite.md  rivalries-insights.md  season-correct-position.md  seasons-league-changes-HANDOFF.md  seasons-league-changes-IMPL-HANDOFF.md  seasons-league-changes-IMPL-PLAN.md  seasons-league-changes-inventory.md  zero-score-gap-audit.md
docs/reviews/: 2026-06-in-browser-review.md
scripts/: audit_historical_divisions.py  audit_reconstructed_roster_weeks.py  audit_zero_score_gaps.py  cron.example  dz-dashboard.service  serve_e2e.py
src/ff_dashboard/: __init__.py  cache.py  engine.py  server.py  settings.py
src/ff_dashboard/analytics/: __init__.py  adp.py  bracket.py  commissioners.py  common.py  conferences.py  coverage.py  curated_events.py  draft.py  efficiency.py  head_to_head.py  historical_divisions.py  historical_team_names.py  injuries.py  insights.py  league_changes.py  league_history.py  matchup_flags.py  matchups.py  nfl_teams.py  owner_story.py  owners.py  player_status.py  players.py  power.py  records.py  rivalries.py  roster_snapshots.py  scoring.py  search.py  season_schedule.py  standings.py  stats.py  teams.py  transactions.py  weekly_scores.py  weighting.py
src/ff_dashboard/api/: __init__.py  deps.py  main.py  schemas.py  static.py
src/ff_dashboard/data/: historical_divisions.json
tests/: conftest.py  test_adp_market_axis.py  test_coverage_integrity.py  test_fixp1_head_to_head.py  test_fixp1_matchups.py  test_fixp1_owners.py  test_fixp1_records.py  test_fixp1_season_schedule.py  test_fixp1_stats.py  test_hamlin_no_contest.py  test_historical_divisions.py  test_historical_team_names.py  test_injuries.py  test_insights_lab.py  test_league_changes.py  test_league_history.py  test_matchup_flags_unit.py  test_owner_story.py  test_p10_endpoints.py  test_p10_search_unit.py  test_p11_static.py  test_p1_bootstrap.py  test_p2_analytics_unit.py  test_p2_endpoints.py  test_p4_transactions.py  test_p5_endpoints.py  test_p5_matchups_unit.py  test_p7_endpoints.py  test_p7_teams_unit.py  test_p8_draft_unit.py  test_p8_endpoints.py  test_p9_endpoints.py  test_p9_power_unit.py  test_player_status_unit.py  test_resonance_viz.py  test_rivalries_insights.py  test_roster_snapshots_unit.py  test_search.py  test_season_correct_position_box.py  test_team_avatar.py  (+2 more)
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
web/e2e/: helpers.ts  journeys.spec.ts  visual.spec.ts
web/src/: main.tsx
web/src/app/: App.tsx
web/src/charts/: chartTheme.test.ts  chartTheme.ts  index.test.tsx  index.tsx
web/src/components/: InjuryBadge.test.tsx  InjuryBadge.tsx  PlayerScoreCell.tsx
(+84 files in other folders)
