[project]
name = "dz-dashboard"
version = "0.4.0"
description = "Phase 2 analytics dashboard for the Danger Zone fantasy football league — a read-only backend-for-frontend (ff_dashboard) over the Phase 1 ff-pipeline database, plus a React SPA (web/)."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "ocmooch", email = "cobs.direct0l@icloud.com" },
]
keywords = ["nfl", "fantasy-football", "analytics", "dashboard", "fastapi", "bff"]

dependencies = [
    # Phase 1 data foundation — reused read-only for its repository (models +
    # queries) and shared API envelope/error helpers. See [tool.uv.sources].
    "ff-pipeline",

    # API (the BFF). uvicorn/fastapi also arrive transitively via ff-pipeline,
    # but we depend on them directly since this package's own code uses them.
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # ORM (read-only sessions over the Phase 1 SQLite file)
    "sqlalchemy[asyncio]>=2.0.30",

    # CLI entrypoint + logging
    "typer>=0.12.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",                  # FastAPI TestClient transport
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
dz-dashboard = "ff_dashboard.server:main"

# ============================================================
# uv sources
# ============================================================
# ff-pipeline (Phase 1) is a sibling repo, co-developed by the same author.
#
#   ACTIVE (local dev): an editable path source to ../danger-zone. This is the
#   package version that produced the live DB this dashboard reads, so the ORM
#   models always match the on-disk schema — no drift. The sibling is kept
#   available locally by design.
#
#   REDUNDANCY (reproducible / CI builds): a pinned git source. Swap the block
#   below to build against a tagged release instead of the working tree. See
#   docs/PHASE2_RUNBOOK.md.
#       ff-pipeline = { git = "ssh://git@github.com/ocmooch/danger-zone.git", tag = "v1.2.0" }
[tool.uv.sources]
ff-pipeline = { path = "../danger-zone", editable = true }

# ============================================================
# Build system
# ============================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ff_dashboard"]

# ============================================================
# Ruff (linter + formatter) — matched to Phase 1
# ============================================================

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "TID", "PTH", "RUF",
]
ignore = [
    "E501",  # line too long (formatter handles)
]

[tool.ruff.lint.flake8-type-checking]
# Pydantic BaseModel reads annotations at runtime; keep those imports runtime.
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
]

# ============================================================
# MyPy (type checker) — strict, matched to Phase 1
# ============================================================

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
plugins = ["pydantic.mypy"]

# ff-pipeline is fully typed (Phase 1 runs mypy --strict) but ships no py.typed
# marker, so mypy treats it as untyped by default. Follow its source directly to
# get real types for the reused repository/api layers without editing Phase 1.
[[tool.mypy.overrides]]
module = ["ff_pipeline.*"]
follow_untyped_imports = true

# ============================================================
# Pytest
# ============================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: marks tests as integration/contract tests",
]
filterwarnings = [
    "error",
    # Starlette 1.2's TestClient emits this against current httpx; not ours to fix.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

# ============================================================
# Coverage
# ============================================================

[tool.coverage.run]
source = ["src/ff_dashboard"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
